[gd_scene load_steps=16 format=2]

[ext_resource path="res://network_non_related/MessageFrame.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainScreen.gd" type="Script" id=2]
[ext_resource path="res://resources/sprites/button_send.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/button_send_pressed.png" type="Texture" id=4]
[ext_resource path="res://resources/sfx/mouse_click_by_freesfx.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/sprites/close_button.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/close_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://network_non_related/KeyboardSFXPlayer.gd" type="Script" id=8]
[ext_resource path="res://network_non_related/LoadingScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://network_non_related/GeneralSFXPlayer.gd" type="Script" id=10]
[ext_resource path="res://resources/sfx/windows_shutdown.wav" type="AudioStream" id=11]
[ext_resource path="res://resources/sfx/windows_boot.wav" type="AudioStream" id=12]
[ext_resource path="res://resources/sfx/msn_received.wav" type="AudioStream" id=13]

[sub_resource type="InputEventKey" id=1]
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
message_frame = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.188235, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollableList" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -121.0
margin_top = 12.0
margin_right = 121.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="VBoxContainer" parent="ScrollableList"]
margin_right = 242.0
margin_bottom = 111.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -19.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MessagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageField" type="LineEdit" parent="MessagePanel/HBoxContainer"]
margin_right = 220.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 9 )
size_flags_horizontal = 3
size_flags_vertical = 0
context_menu_enabled = false
placeholder_text = " ___________________________________________"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButtonContainer" type="Control" parent="MessagePanel/HBoxContainer"]
margin_left = 224.0
margin_right = 240.0
margin_bottom = 11.0
rect_min_size = Vector2( 16, 0 )

[node name="SendButton" type="TextureButton" parent="MessagePanel/HBoxContainer/SendButtonContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -6.5
margin_right = 9.0
margin_bottom = 9.5
shortcut = SubResource( 2 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -31.0
margin_right = 59.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -6.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ConnectionPanel/VBoxContainer"]
margin_right = 102.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0.188235, 0.231373, 1 )
text = "SHELL CHAT"
align = 1

[node name="UsernameField" type="LineEdit" parent="ConnectionPanel/VBoxContainer"]
margin_top = 10.0
margin_right = 102.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 9 )
align = 1
context_menu_enabled = false
placeholder_text = "Username"

[node name="IpField" type="LineEdit" parent="ConnectionPanel/VBoxContainer"]
margin_top = 23.0
margin_right = 102.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 9 )
text = "127.0.0.1"
align = 1
context_menu_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ConnectionPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 102.0
margin_bottom = 50.0

[node name="HostButton" type="Button" parent="ConnectionPanel/VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="JoinButton" type="Button" parent="ConnectionPanel/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 102.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 10 )

[node name="UnderBar" type="ColorRect" parent="Control"]
anchor_right = 1.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 11 )
color = Color( 1, 0.807843, 0.588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="ColorRect" parent="Control"]
anchor_right = 1.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
color = Color( 0.945098, 0.94902, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_bottom = 11.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingScreen" parent="." instance=ExtResource( 9 )]
visible = false

[node name="SFXs" type="Node" parent="."]

[node name="MouseSFXPlayer" type="AudioStreamPlayer" parent="SFXs"]
stream = ExtResource( 5 )

[node name="KeyboardSFXPlayer" type="AudioStreamPlayer" parent="SFXs"]
script = ExtResource( 8 )
sfxs = [ "res://resources/sfx/Keyboard-Button-Click-02-c-FesliyanStudios.com.wav", "res://resources/sfx/Keyboard-Button-Click-03-c-FesliyanStudios.com.wav", "res://resources/sfx/Keyboard-Button-Click-04-c-FesliyanStudios.com.wav" ]

[node name="GeneralSFXPlayer" type="AudioStreamPlayer" parent="SFXs"]
script = ExtResource( 10 )
windows_boot = ExtResource( 12 )
windows_shutdown = ExtResource( 11 )
msn_received = ExtResource( 13 )
[connection signal="button_up" from="MessagePanel/HBoxContainer/SendButtonContainer/SendButton" to="." method="_on_send_button_up"]
[connection signal="button_up" from="ConnectionPanel/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_up"]
[connection signal="button_up" from="ConnectionPanel/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_up"]
[connection signal="button_up" from="Control/ExitButton" to="." method="_on_exit_button_up"]
